@@ -3,11 +3,13 @@
 = 6.x.x - 2022-xx-xx =
 * Fix - Fixed capitalization for payment method names: iDEAL, giropay, and Sofort.
 * Add - Text to explain how to enable webhooks when manually entering your API keys in the new Stripe settings.
-* Tweak - Redirect to the settings tab after an account is connected
+* Tweak - Redirect to the settings tab after an account is connected.
 * Tweak - Prompt message when navigating out Stripe settings with unsaved changes
 * Tweak - Show toast when payment methods list is updated with new payment methods.
-* Fix - JS error on checkout when Boleto method was not active
+* Fix - JS error on checkout when Boleto method was not active.
 * Fix - Fixed bug that show "Use new payment method" on pay order page when there were no saved card was.
+* Tweak - Autocomplete for account keys and webhooks fields were disabled.
+* Fix - The settings page is not reloaded when the user enters invalid account keys.
 
 = 5.9.0 - 2021-12-09 =
 * Add - Add Stripe API to generate connection tokens, manage terminal locations, create customers, get account summary, capture payment.
